# pymcp

./: README.md  json-template.md  pyproject.toml  requirement.txt
mcp/protocols/: requests.py  responses.py
mcp/server/: commands.py  connection_manager.py  router.py  server.py  worker.py
mcp/tools/: registry.py
src/pymcp/: __init__.py  config.py  lib.py  logger.py  main.py
src/pymcp/client/: __init__.py  client.py  exceptions.py
src/pymcp/core_tools/: discovery.py  system.py
src/pymcp/protocols/: base_msg.py  requests.py  responses.py  tools_def.py
src/pymcp/server/: commands.py  connection_manager.py  response_sender.py  router.py  sender.py  server.py  tool_executor.py  validator.py  worker.py
src/pymcp/tools/: decorators.py  loader.py  registry.py
tests/: test_server.py
