# pyproject.toml

[project]
name = "pymcp"
version = "0.1.0"
description = "A Modern Context Protocol (MCP) implementation using WebSockets and JSON."
dependencies = [
    "websockets",
    "pydantic",
    "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pymcp = "pymcp.main:run_cli"
